
For a Healing Scepter, you need to fill the crafting grid with Essence of Life, etc.

Crafted items have a small chance to become unique too.
The only thing crafting items like this assures you is their level range and the gear type. 
So you can craft a lvl 10-20 Sword. But you can't be sure what rarity, affixes etc it will have.
Level is capped to player level, so if you craft a piece of gear, it will never go above your level to make sure you can use it. -
(Note, this is within the gear's level range, so Player lvl 25, you craft a lvl 40-50 sword, you'll get a lvl 40 sword.)

All recipes use a very predictable system, so if you can figure out how to craft 1 wand, you'll know how to craft them all.
The only confusion might be rings and necklaces. They only have 2 level ranges, 0-20 and 20-50. So only 2 crafting recipes.

The material needed for the item is based on highest level the item can have.

Compatibility update:

- compatible items are now always enabled
- You can now pick gear from creative tab, and it will get stats.
- compatible item datapacks no longer specify level, as level is now dictated by gear type
- compat items now get stats instantly when crafted (for some reason you need to reopen inventory for the client to get the data synced tho)

Update your library of exile.

- should fix crossbows not doing extra dmg
- added gear slot datapacks. Super tiny, just declares drop chances. 
So if there's 100 different sword types, and 5 axe types, they'll still have same chance to drop if their gear slots have same weight.
- renamed all my packages to my new mod name
- mob affixes now aren't separated into prefixes and suffixes
- fix jewel crash bug
- lvl 1 common mobs should now have similar health as vanilla minecraft.
- mobs will have less hp on average
- fix nature balm
- level ups now show on screen title messages.
- fixed some texture errors
- fix attack speed
- Jar in Jared some deps in my library
- fix typo in mod name of config