@@ -49,7 +49,6 @@ public class CompatibleItemDataPackLoader extends BaseDataPackLoader<CompatibleI
                     CompatibleItem c = new CompatibleItem();
                     c.can_be_salvaged = true;
                     c.item_type = slot.GUID();
-                    c.loot_drop_weight = 0;
 
                     String id = Registry.ITEM.getId(item)
                         .toString();
@@ -79,7 +78,7 @@ public class CompatibleItemDataPackLoader extends BaseDataPackLoader<CompatibleI
                     c.can_be_salvaged = true;
                     c.item_type = uniq.getBaseGearType()
                         .GUID();
-                    c.loot_drop_weight = 0;
+
                     c.chance_to_become_unique = 100;
                     c.unique_id = uniq.GUID();
 
